fixed top collapsable menu trigger(show/hide) functionality

--- a/src/main/resources/static/css/user-dashboard-style.css
+++ b/src/main/resources/static/css/user-dashboard-style.css
@@ -25,11 +25,12 @@
 	border-radius: .175rem;
 	margin-right: 0;
 	width: 100%;
+	transition: 0.3s ease-in-out;
 }
 
 .top-search-text-input:active {
 	/*border:1px solid rgb(36, 31, 49);*/
-	border: none;
+	/*border: none;*/
 	/*background-color: aqua;*/
 }
 
@@ -53,6 +54,11 @@
 	font-size: 10pt;
 	font-weight: 600;
 }
+
+.top-search-btn:hover {
+	background-color: rgb(3, 3, 22);
+	color: rgb(192, 191, 188);
+	}
 
 .top-collapsable-menu-container {
 	border-top: 0;
@@ -95,9 +101,9 @@
 	}
 	
 .top-collapsable-menu-outer-container-expanded {
-	border: 2px solid red;
+	/*border: 2px solid red;
 	width: 100%;
-	height: 100%;
+	height: 100%;*/
 	z-index: 2200;
 	position: absolute;
 	display: block;
